[project]
name = "genomelens-gff"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]
dynamic = ["version"]

[project.scripts]
genomelens-gff = "genomelens_gff:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/genomelens_gff/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/genomelens_gff"]

[dependency-groups]
dev = [
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
